# My_Bank_Api_V2

./: .env  CHANGELOG.md  ESTRUTURA.md  IMPLEMENTACAO.md  INDEX.md  LEIA-ME-PRIMEIRO.txt  MELHORIAS_RESUMO.md  README.md  RESULTADO_FINAL.md  SUMARIO.md  alembic.ini  pyproject.toml
alembic/: env.py
src/: config.py  database.py  exceptions.py  main.py  security.py
src/controllers/: account.py  auth.py  transaction.py
src/models/: transaction.py
src/schemas/: responses.py  transaction.py
src/services/: account.py  transaction.py
src/views/: account.py  auth.py  transaction.py
